# fastapi-serverless-poetry

./: package-lock.json  package.json  pyproject.toml  serverless.yml
